# risk-control

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  release.yml  setup-python.yml
api/decision/base/: index.html
api/decision/classification/: index.html
api/decision/examples/: index.html
api/decision/regression/: index.html
api/parameter/: index.html
api/risk/: index.html
api/risk_control/: index.html
api/tools/fwer_control/: index.html
api/tools/pvalues/: index.html
docs/api/: parameter.md  risk.md  risk_control.md
docs/api/decision/: base.md  classification.md  examples.md  regression.md
docs/api/tools/: fwer_control.md  pvalues.md
examples/: plot_ai_assistance.py  plot_classification.py  plot_classification_bis.py  plot_precision_recall.py  plot_regression.py
examples/utils/: data.py  model.py  plot.py
mlrisko/: __init__.py  parameter.py  plot.py  risk_control.py
mlrisko/decision/: base.py  classification.py  decision.py  regression.py
mlrisko/tools/: pvalues.py
risk_control/: abstention.py  parameter.py  plot.py  risk.py  risk_control.py
risk_control/decision/: __init__.py  base.py  classification.py  decision.py  regression.py
risk_control/tools/: fwer_control.py  pvalues.py
search/: search_index.json
tests/: test_ex.py  test_imports.py
