[project]
name = "riskcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gallery>=0.10.4",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "pip-system-certs>=5.0",
]
dev = [
    "coverage>=7.9.1",
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.12.11",
    "scipy-stubs>=1.16.0.2",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
scripts_are_modules = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-vs -vv -vsx"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = "risk_control"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
show-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "RUF"]
ignore = ["E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
