[project]
name = "mlrisko"
version = "0.1.0"
description = "A toolkit to calibrate predictive algorithms to achieve risk control."
keywords = ["risk-control", "machine-learning", "ai", "statistics", "multiple-testing"]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "Thibault Cordier", email = "thibault.cordier.pro@gmail.com"},
]
maintainers = [
    {name = "Thibault Cordier", email = "thibault.cordier.pro@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/thibaultcordier/risk-control"
"Bug Tracker" = "https://github.com/thibaultcordier/risk-control/issues"
"Source Code" = "https://github.com/thibaultcordier/risk-control"
"Documentation" = "https://thibaultcordier.github.io/risk-control/"
"Changelog" = "https://github.com/thibaultcordier/risk-control/releases"
"PyPI" = "https://pypi.org/project/mlrisko/"
"Code Coverage" = "https://codecov.io/gh/thibaultcordier/risk-control"
"CI/CD Pipeline" = "https://github.com/thibaultcordier/risk-control/actions"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gallery>=0.10.4",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "pip-system-certs>=5.0",
]
dev = [
    "coverage>=7.9.1",
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.12.11",
    "scipy-stubs>=1.16.0.2",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
scripts_are_modules = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-vs -vv -vsx"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = "mlrisko"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
show-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "RUF"]
ignore = ["E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
